# pcapfile-io

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cursor/rules/: architecture-design.mdc  coding-standards.mdc  development-workflow.mdc  project-manage.mdc
.github/workflows/: cargo-publish.yml  github-release.yml  release-coordinator.yml  release.yml
benches/: index_performance.rs  read_performance.rs  write_performance.rs
docs/: IMPLEMENTATION_SUMMARY.md  INTERNAL_DESIGN.md
examples/: dataset_usage.rs
hexpat/: README.md  pcapfile.hexpat
hooks/: README.md  install-hooks.ps1
src/: lib.rs
src/api/: reader.rs  writer.rs
src/business/: cache.rs  config.rs  mod.rs  processor.rs
src/business/index/: manager.rs  mod.rs  types.rs
src/data/: file_reader.rs  file_writer.rs  formats.rs  mod.rs  models.rs
src/foundation/: error.rs  mod.rs  types.rs  utils.rs
tests/: README.md  test_auto_index_generation.rs  test_data_consistency.rs  test_index_functionality.rs  test_large_dataset.rs  test_seek_and_navigation.rs  test_small_dataset.rs  test_timestamp_indexing.rs
tests/common/: mod.rs
