[package]
name = "pcapfile-io"
version = "0.1.3"
edition = "2021"
description = "高性能PCAP文件读写库"
license = "MIT"
authors = ["Zoranner"]
repository = "https://github.com/Zoranner/pcapfile-io"
keywords = ["pcap", "network", "packet", "file-format", "io"]
categories = ["network-programming", "filesystem", "parsing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
thiserror = "1.0"
sha2 = "0.10"
crc32fast = "1.3"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[features]
default = ["std"]
std = []

[lib]
name = "pcapfile_io"
path = "src/lib.rs"

[[example]]
name = "dataset_usage"
path = "examples/dataset_usage.rs"

[[bench]]
name = "read_performance"
harness = false

[[bench]]
name = "write_performance"
harness = false

[[bench]]
name = "index_performance"
harness = false
